app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

* {
	/*font-family: 'Irish Grover', cursive;*/
	/*font-family: 'Henny Penny', cursive;*/
	font-family: 'Short Stack', cursive;
}
body{
	background: #ffe629
}
h1  {
  color: #1d009b;
  font-size: 3em;
  margin: 0
}
h2 {
	color:#1d009b;
	text-align:center;
}
header {
	display: flex;
	justify-content: space-between;
}
header h1 {
    float:left;
    margin-top: 1%;
    margin-left: 3%;
 }
header nav {
    float:right;
    margin-top: 2%;
    margin-right: 3%;
    width: 300px;
 }

.button {
  display: inline-block;
  padding: 9px;
  border-radius: 5%;
  border: 1px solid black;
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
}

.user_nav {
  text-align: center;
  background-color: #ff3e3e;
  height: 100%;
  width: 40%;
}

.user_nav:active {
  background-color: #ff3e3e;
  box-shadow: 0 4px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  transform: translateY(4px);
}

.log_nav {
  background-color: #ffa429;
  height: 100%;
  width: 25%;
}

.log_nav:active {
  background-color: #ffa429;
  box-shadow: 0 4px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  transform: translateY(4px);
}

.flex-grid {
  display: flex;
  padding: 30px;
}

.user {
  flex: 4;
}

.post {
  flex: 6;
}

.glyph {
  display: inline-block;
  flex: 1;
}

.show-photo {
	width: 100vw;
}

#map-tooltips {
	margin-top: 15px;
	border-top: 5px solid black
}

